--- a/index.html
+++ b/index.html
@@ -2,17 +2,24 @@
 <html>
   <head>
   	<meta charset="utf-8">
+    <meta name='HandheldFriendly' content='True' />
+    <!-- <meta name='viewport' content='initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' /> -->
+    <meta name='viewport' content='user-scalable=no' />
+    <!-- <meta name="viewport" content="width=device-width" /> -->
   	<title>title</title>
   	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
   	<script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script src='js/jquery.eraser.js' type='text/javascript'></script>
+    <script src='js/jquery.touchSwipe.min.js' type='text/javascript'></script>
     <script type="text/javascript" src="js/main.js"></script>
   </head>
   <body>
     <div class="header"></div>
     <div class="content">
       <img id="index_img" src="images/1.jpg">
-      <img id="buttom_img" src="images/2.jpg">
+      <img id="bottom_img" src="images/2.jpg">
+      <img id="next_img" src="images/3.jpg">
     </div>
     <div class="footer"></div>
   </body>
