--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <body>
     <div class="header"></div>
     <div class="content">
+      <div id="loader">
+        loading...
+      </div>
       <img id="index_img" src="images/1.jpg">
 
       <img id="bottom_img" src="images/2.jpg">
