--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
     <meta name='viewport' content='user-scalable=no' />
     <!-- <meta name="viewport" content="width=device-width" /> -->
     <title>title</title>
-    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
     <script src='js/jquery.eraser.js' type='text/javascript'></script>
     <script src='js/jquery.touchSwipe.min.js' type='text/javascript'></script>
     <script type="text/javascript" src="js/main.js"></script>
     <style type="text/css">
+       .animated {
+          -webkit-animation-duration: 1s;
+                  animation-duration: 1s;
+          -webkit-animation-fill-mode: both;
+                  animation-fill-mode: both;
+        }
        @-webkit-keyframes fadeInDown {
         0% {
           
