--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
     <div class="header"></div>
     <div class="content">
       <div id="loader">
-        loading...
+        loading...1.01
       </div>
       <img id="index_img" src="images/1.jpg">
 
