--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name='viewport' content='initial-scale=1.0; maximum-scale=1.0; user-scalable=0;' /> -->
     <meta name='viewport' content='user-scalable=no' />
     <!-- <meta name="viewport" content="width=device-width" /> -->
-    <title>title</title>
+    <title>万圣节1.05</title>
     <!-- <link rel="stylesheet" type="text/css" href="css/animate.css"> -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script type="text/javascript" src="js/jquery-2.1.1.js"></script>
@@ -536,7 +536,7 @@
     <div class="header"></div>
     <div class="content">
       <div id="loader">
-        loading...1.01
+        loading...
       </div>
       <img id="index_img" src="images/1.jpg">
 
