--- a/index.html
+++ b/index.html
@@ -289,12 +289,12 @@
 
       @-webkit-keyframes fadeOut {
         0% {}
-        100% {}
+        100% {opacity: 0;}
       }
 
       @keyframes fadeOut {
         0% {}
-        100% {}
+        100% {opacity: 0;}
       }
 
       .fadeOut {
